Adicionei meus projetos ao meu perfil

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <a href="https://www.instagram.com/g.sampaio_7?igsh=MTBwOGwzOXpkOTd2YQ==" target="_blank"><img src="imagens/logo-instagram.png" alt=""></a>
                 </div>
                 <div id="logo02">
-                    <a href="" target="_blank"><img src="imagens/logo-facebook.png" alt=""></a>
+                    <a href="https://www.facebook.com/profile.php?id=61553030672340" target="_blank"><img src="imagens/logo-facebook.png" alt=""></a>
                 </div>
                 <div id="logo03">
-                    <a href="" target="_blank"><img src="imagens/logo-github.png" alt=""></a>
+                    <a href="https://github.com/GNS784" target="_blank"><img src="imagens/logo-github.png" alt=""></a>
                 </div>
                 <div id="logo04">
-                    <a href="" target="_blank"><img src="imagens/logo-linkedin.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/gustavo-sampaio-079221267?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="imagens/logo-linkedin.png" alt=""></a>
                 </div>
             </aside>
         </section>
@@ -64,6 +64,24 @@
 
         <section id="projetos"> <!--          PARTE DOS PROJETOS CRIADOS                    -->
             <h2>Meus projetos</h2>
+            <aside>
+                <div class="caixas_projetos">
+                    <a href="https://gns784.github.io/projeto-android/" target="_blank"><img src="imagens/logo-android.png" alt=""></a>
+                    <p class="nomes_projetos">ANDROID</p>
+                </div>
+                <div class="caixas_projetos">
+                    <a href="https://gns784.github.io/projeto-login/" target="_blank"><img src="imagens/logo-social.png" alt=""></a>
+                    <p class="nomes_projetos">LOGIN</p>
+                </div>
+                <div class="caixas_projetos">
+                    <a href="https://gns784.github.io/projeto-cordel/" target="_blank"><img src="imagens/logo-livro.png" alt=""></a>
+                    <p class="nomes_projetos">CORDEL</p>
+                </div>
+                <div class="caixas_projetos">
+                    <a href="https://gns784.github.io/projeto-social/" target="_blank"><img src="imagens/logo-pessoa.png" alt=""></a>
+                    <p class="nomes_projetos">SOCIAL</p>
+                </div>
+            </aside>
         </section>
 
         <section id="empresa"> <!--          PARTE DA EMPRESA                    -->
