--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Perfil</title>
     <link rel="shortcut icon" href="imagens/" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediacriyes.css">
 </head>
 <body>
 
