--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
             <h2>Agradeço pela visita. <br> Espero vê-lo novamente em breve</h2>
             <p>Se precisar entrar em contato, fique à vontade para me chamar pelas redes sociais listadas acima ou pelos contatos disponíveis abaixo. Estou à disposição para ajudar!</p>
             <aside>
-                <div class="logos"><img src="imagens/logo-whatsapp.png" alt="" id="logo10"></div>
-                <div class="logos"><img src="imagens/logo-gmail.png" alt="" id="logo11"></div>
+                <div class="logos">
+                    <a href="https://wa.me/qr/DFBKUNBJLH6EF1" target="_blank"><img src="imagens/logo-whatsapp.png" alt="" id="logo10"></a>
+                </div>
+                <div class="logos">
+                    <a href="https://mail.google.com/mail/u/0/#sent" target="_blank"><img src="imagens/logo-gmail.png" alt="" id="logo11"></a>
+                </div>
             </aside>
         </section>
 
