--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -30,31 +31,17 @@
         <section id="midias"> <!--          PARTE DAS MÍDIAS SOCIAIS                    -->
             <h2>Mídias Sociais</h2>
             <aside>
-                <div>
-                    <div id="box_img">
-                        <a href="https://www.instagram.com/g.sampaio_7?igsh=MTBwOGwzOXpkOTd2YQ==" target="_blank"><img src="imagens/logo-instagram.png" alt="" id="img"></a>
-                    </div>
-                    <div id="res_instagram" onmouseenter="entrar()">
-
-                    </div>
+                <div id="logo01">
+                    <a href="https://www.instagram.com/g.sampaio_7?igsh=MTBwOGwzOXpkOTd2YQ==" target="_blank"><img src="imagens/logo-instagram.png" alt=""></a>
                 </div>
-                <div class="box_midia">
-                    <a href="https://www.facebook.com/profile.php?id=61553030672340" target="_blank"><img src="imagens/logo-facebook.png" alt="" class="img"></a>
-                    <div id="res_facebook " onmouseenter="entrar()">
-
-                    </div>
+                <div id="logo02">
+                    <a href="https://www.facebook.com/profile.php?id=61553030672340" target="_blank"><img src="imagens/logo-facebook.png" alt=""></a>
                 </div>
-                <div class="box_midia">
-                    <a href="https://github.com/GNS784" target="_blank"><img src="imagens/logo-github.png" alt="" class="img"></a>
-                    <div id="res_git-hub" onmouseenter="entrar()">
-
-                    </div>
+                <div id="logo03">
+                    <a href="https://github.com/GNS784" target="_blank"><img src="imagens/logo-github.png" alt=""></a>
                 </div>
-                <div class="box_midia">
-                    <a href="https://www.linkedin.com/in/gustavo-sampaio-079221267?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="imagens/logo-linkedin.png" alt="" class="img"></a>
-                    <div id="res_linkedin" onmouseenter="entrar()">
-
-                    </div>
+                <div id="logo04">
+                    <a href="https://www.linkedin.com/in/gustavo-sampaio-079221267?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="imagens/logo-linkedin.png" alt=""></a>
                 </div>
             </aside>
         </section>
@@ -122,9 +109,6 @@
                 </div>
             </aside>
         </section>
-        
-        
-        <script src="script.js"></script>
 
     </main>
 </body>
